template admin dan pembeli

--- a/ADMIN/transaksi.html
+++ b/ADMIN/transaksi.html
@@ -5,7 +5,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Bootstrap -->
 	<!-- Latest compiled and minified CSS -->
@@ -91,7 +91,7 @@
               <td>Rp.60.000</td>
               <td><span class="proses">Proses</span></td>
               <td><span class="saldo_docotin">Saldo Docotin</span></td>
-							<td><a href="detail_transaksi.html">Detail </a></td>
+							<td><a href="detail_transaksi_proses.html">Detail </a></td>
           </tr>
           <tr>
               <td>3</td>
@@ -111,7 +111,7 @@
               <td>Rp.60.000</td>
               <td><span class="habis">Habis</span></td>
               <td><span class="saldo_docotin">Saldo Docotin</span></td>
-							<td><a href="detail_transaksi.html">Detail </a></td>
+							<td><a href="detail_transaksi_habis.html">Detail </a></td>
           </tr>
 
         </tbody></table>
@@ -122,6 +122,6 @@
     
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="scripts/main.js"></script>  
+  <script src="../scripts/main.js"></script>  
 
 </body></html>
