--- a/ADMIN/detail_transaksi_habis.html
+++ b/ADMIN/detail_transaksi_habis.html
@@ -5,7 +5,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Bootstrap -->
 	<!-- Latest compiled and minified CSS -->
@@ -60,98 +60,112 @@
 		<div class="row">
 			<div class="col-md-7">
         <div class="card">
-  					<table class="custom-table">
-                <tbody><tr class="success">
-                  <td>Nama Pembeli</td>
-                  <td>:</td>
-                  <td>Flo Anggita</td>
-                </tr>
-                <tr>
-                  <td>Lantai</td>
-                  <td>:</td>
-                  <td>Lantai 7</td>
-                </tr>
-                <tr>
-                  <td>No Handphone</td>
-                  <td>:</td>
-                  <td>0826728832</td>
-                </tr>
-                <tr>
-                  <td>Jenis Pembayaran</td>
-                  <td>:</td>
-                  <td><span class="pembayaran">CASH</span></td>
-                </tr>
-                <tr>
-                  <td>No Transaksi</td>
-                  <td>:</td>
-                  <td>312000001881</td>
-                </tr>
-                <tr>
-                  <td>Status</td>
-                  <td>:</td>
-                  <td><span class="belum_verifikasi">Belum Verifikasi</span></td>
-                </tr>
-                <tr>
-                    <td>Tracking</td>
-                    <td>:</td>
-                    <td>
-                      <div class="d-flex">
-                        <div class="circle-process">
-                          <div class="step">1</div>
-                          <div class="desc">Verifikasi</div>
-                        </div>
-                        <div class="circle-process">
-                          <div class="step">2</div>
-                          <div class="desc">Persiapan</div>
-                        </div>
-                        <div class="circle-process">
-                          <div class="step">3</div>
-                          <div class="desc">Diterima</div>
-                        </div>
+  				<table class="custom-table">
+            <tbody><tr class="success">
+              <td>Nama Pembeli</td>
+              <td>:</td>
+              <td>Flo Anggita</td>
+            </tr>
+            <tr>
+              <td>Lantai</td>
+              <td>:</td>
+              <td>Lantai 7</td>
+            </tr>
+            <tr>
+              <td>No Handphone</td>
+              <td>:</td>
+              <td>0826728832</td>
+            </tr>
+            <tr>
+              <td>Jenis Pembayaran</td>
+              <td>:</td>
+              <td><span class="pembayaran">SALDO DOCOTIN</span></td>
+            </tr>
+            <tr>
+              <td>No Transaksi</td>
+              <td>:</td>
+              <td>312000001881</td>
+            </tr>
+            <tr>
+              <td>Status</td>
+              <td>:</td>
+              <td><span class="habis">Habis</span></td>
+            </tr>
+            <tr>
+              <td>Tracking</td>
+              <td>:</td>
+              <td>
+                <div class="d-flex">
+                  <div class="circle-process">
+                    <div class="step">1</div>
+                      <div class="desc">Verifikasi</div>
+                  </div>
+                    <div class="circle-process">
+                      <div class="step">2</div>
+                        <div class="desc">Persiapan</div>
+                    </div>
+                      <div class="circle-process">
+                        <div class="step">3</div>
+                        <div class="desc">Diterima</div>
                       </div>
-                    </td>
-                  </tr>			
-            </tbody></table>
+                 </div>
+              </td>
+            </tr>			
+          </tbody></table>
         </div>
 
-				  <div class="row card">
-            <div class="col-md-4">
-              <div class="menu-pics">
-                <img src="images/mie.png" alt="">
-              </div>
-            </div>
-              <div class="col-md-7">
-                <p> Mie Indomie Saus Eropa</p> 
-                <p><a href="detail_transaksi_saldo.html">Rp. 10.000</a></p>               
-                <h5 class="jumlah"> Jumlah Porsi = <span id="count">3</span></h5>                
-              </div>
-          </div>
-
-					<div class="row card">
+        <div class="card">
+					<div class="row">
             <div class="col-md-4">
                 <div class="menu-pics">
-                  <img src="images/mie_goreng.png" alt="">
+                  <img src="../images/mie.png" alt="">
                 </div>
             </div>
-              <div class="col-md-7">
-                <p> Mie Indomie Saus Afrika</p> 
-                <p><a href="detail_transaksi_habis.html">Rp. 10.000</a></p>
-                <h5 class="jumlah"> Jumlah Porsi = <span id="count">3</span></h5>                
-              </div>
+            <div class="col-md-7">
+              <p> Mie Indomie Saus Eropa</p>                
+              <p> Rp. 10.000</p>
+                <div class="d-flex">
+                  <h5 class="jumlah"> Jumlah Porsi = <span id="count">3</span></h5> 
+                  <h3 class="jumlah-habis">Jumlah yang tersedia = <span id="count">0</span></h3>
+                </div>      
+            </div>
           </div>
+        </div>
+
+        <div class="card">
+				<div class="row">
+          <div class="col-md-4">
+            <div class="menu-pics">
+              <img src="../images/mie_goreng.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-7">
+            <p> Mie Indomie Saus Afrika</p>                
+            <p> Rp. 10.000</p>
+              <div class="d-flex">
+                <h5 class="jumlah"> Jumlah Porsi = <span id="count">3</span></h5> 
+                <h3 class="jumlah-habis">Jumlah yang tersedia = <span id="count">0</span></h3>
+              </div>                      
+          </div>
+        </div>
+        </div>
+
 			</div>
 
       <div class="col-md-5">
-          <div class="panel-total">
+        <div class="panel-total">
           <div class="panel">
               <div class="panel-heading">Total Belanja Kamu</div>
               <p>Mie Indomie Saus Eropa</p>
-              <p>Rp 10.000 x 3 = Rp 30.000</p>
+              <p>Rp 10.000 x 0 = Rp 0</p>
               <p>Mie Indomie Saus Afrika</p>
-              <p>Rp 10.000 x 3 = Rp 30.000</p>
-              <h5 class="jumlah"> Total Keseluruhan<span id="count"></span></h5>
-              <h5 class="total"> <span id="count">Rp 60.000</span></h5>
-            </div> 
+              <p>Rp 10.000 x 0 = Rp 0</p>
+              <h5 class="total-keseluruhan"> Total Keseluruhan<span id="count"></span></h5>
+              <h5 class="total"> <span id="count">Rp 0</span></h5>
+          
+              <h5 class="saldo-habis"> Saldo Anda Rp 70.000<span id="count"></span></h5>
+              <h5 class="saldo-anda-habis"> Saldo Anda tidak terpotong<span id="count"></span></h5>  
+          </div> 
           </div>
       </div>
 		</div>
@@ -162,6 +176,6 @@
     
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="scripts/main.js"></script>  
+  <script src="../scripts/main.js"></script>  
 
 </body></html>
