--- a/ADMIN/detail_va.html
+++ b/ADMIN/detail_va.html
@@ -5,7 +5,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Bootstrap -->
 	<!-- Latest compiled and minified CSS -->
@@ -57,55 +57,58 @@
 		</div>
 	
 	<div class="content">
+		<div class="row">
+		<div class="col-md-8 col-md-offset-2">
 		<div class="panel">
-			<div class="panel-heading">TABEL FLAGGING</div>
+			<div class="panel-heading">DETAIL VA</div>
+			<div class="bordered-box">
+				<div class="logo">
+					<img src="http://beta.docotel.net/images/logo/docotel-logo.png" alt="" class="doco-logo">
+				</div>
+					<h4>DOCO CAFE DOCOTEL TEKNOLOGI</h4>
+					<h5>TOP UP SALDO</h5>
+						<table class="detail-va centered-table">
+							<tbody><tr class="success">
+								<td>Kode VA Debit</td>
+								<td>:</td>
+								<td>125554466001</td>
+							</tr>
+							<tr>
+								<td>Nama Pembeli</td>
+								<td>:</td>
+								<td>Florida Anggitasari</td>
+							</tr>
+							<tr>
+								<td>Email Pembeli</td>
+								<td>:</td>
+								<td>florida.anggita@gmail.com</td>
+							</tr>
+							<tr>
+								<td>Nomor HP Pembeli</td>
+								<td>:</td>
+								<td>081247661362</td>
+							</tr>
+							<tr>
+								<td>Tanggal Pemesanan</td>
+								<td>:</td>
+								<td>12 Maret 2019</td>
+							</tr>
+							<tr>
+								<td>Jumlah Top up</td>
+								<td>:</td>
+								<td>Rp 1.000.000,-</td>
+							</tr>
+							<tr>
+								<td>Status</td>
+								<td>:</td>
+								<td><span class="saldo-bertambah">SALDO BERTAMBAH</span></td>
+							</tr>			
+						</tbody></table>
+			</div>
+				<a href="list_va.html"><button class="btn btn-primary" type="button">Kembali</button></a>
 		</div>
-		
-		<table class="table table-bordered">
-			<tbody><tr class="success">
-				<td>No VA</td>
-				<td>Jenis</td>
-				<td>Pengguna</td>
-				<td>Status</td>
-				<td>Aksi</td>
-			</tr>
-			<tr>
-				<td>312999188881321</td>
-				<td>Penarikan</td>
-				<td>Anggita</td>
-				<td>BELUM DIPROSES</td>
-				<td><a href="detail_va.html">Detail</a></td>
-			</tr>
-			<tr>
-				<td>312999188881321</td>
-				<td>Top Up</td>
-				<td>Floridia</td>
-				<td>SALDO BERTAMBAH</td>
-				<td><a href="detail_va.html">Detail</a></td>
-			</tr>
-			<tr>
-				<td>312999188881321</td>
-				<td>Top Up</td>
-				<td>Frorida</td>
-				<td>SALDO DIBERTAMBAH</td>
-				<td><a href="detail_va.html">Detail</a></td>
-			</tr>
-			<tr>
-				<td>312999188881321</td>
-				<td>Penarikan</td>
-				<td>Anggita</td>
-				<td>SALDO DITARIK</td>
-				<td><a href="detail_va.html">Detail</a></td>
-			</tr>
-			<tr>
-				<td>312999188881321</td>
-				<td>Top Up</td>
-				<td>Frorida</td>
-				<td>BELUM DIPROSES</td>
-				<td><a href="detail_va.html">Detail</a></td>
-			</tr>
-		</tbody></table>
-		
+		</div>
+		</div>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -113,6 +116,6 @@
     
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="scripts/main.js"></script>	
+	<script src="../scripts/main.js"></script>	
 
 </body></html>
