--- a/ADMIN/history_transaksi.html
+++ b/ADMIN/history_transaksi.html
@@ -5,7 +5,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Bootstrap -->
 	<!-- Latest compiled and minified CSS -->
@@ -80,7 +80,7 @@
 						<td>100</td>
 						<td>Rp 100.000</td>
 						<td>Lt.7</td>
-						<td>Mie Indomie <img src="images/mie.png" alt="" class="menu"></td>
+						<td>Mie Indomie <img src="../images/mie.png" alt="" class="menu"></td>
 						<td><span class="success">Success</span> </td>
 						<td>Detail</td>
 					</tr>	
@@ -91,7 +91,7 @@
 						<td>100</td>
 						<td>Rp 100.000</td>
 						<td>Lt.7</td>
-						<td>Mie Indomie <img src="images/mie.png" alt="" class="menu"></td>
+						<td>Mie Indomie <img src="../images/mie.png" alt="" class="menu"></td>
 						<td><span class="success">Success</span> </td>
 						<td>Detail</td>
 					</tr>
@@ -102,7 +102,7 @@
 						<td>100</td>
 						<td>Rp 100.000</td>
 						<td>Lt.7</td>
-						<td>Mie Indomie <img src="images/mie.png" alt="" class="menu"></td>
+						<td>Mie Indomie <img src="../images/mie.png" alt="" class="menu"></td>
 						<td><span class="ignore"> Ignore</span></td>
 						<td>Detail</td>
 					</tr>
@@ -117,6 +117,6 @@
     
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="scripts/main.js"></script>	
+	<script src="../scripts/main.js"></script>	
 
 </body></html>
