--- a/PEMBELI/detail_top_up.html
+++ b/PEMBELI/detail_top_up.html
@@ -23,7 +23,7 @@
   </head>
   <body>
 	<input type="hidden" id="menu" value="profile">
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-dark">
 			<div class="container-fluid">
 			  <!-- Brand and toggle get grouped for better mobile display -->
 			  <div class="navbar-header">
