--- a/PEMBELI/index2.html
+++ b/PEMBELI/index2.html
@@ -52,7 +52,7 @@
     <div class="form-search"> 
       <input type="text" class="form-control" id="inputEmail3">
       <br>
-      <div class="button_cari"><button type="button" class="btn btn-primary">Cari</button></div> 
+      <div class="button_cari"><button type="button" class="btn btn-danger">Cari</button></div> 
     </div>
   </div>
 
