--- a/PEMBELI/ubah.html
+++ b/PEMBELI/ubah.html
@@ -48,9 +48,9 @@
 	
 		<div class="sidebar">
 			<ul>
-				<a href="keranjang.html"><li data-target="flagging" class="active">Keranjang</li></a>
-				<a href="transaksi.html"><li data-target="transaksi">List Pesanan</li></a>
-				<a href="profile.html"><li data-target="history_transaksi">Profile</li></a>
+				<a href="keranjang.html"><li data-target="keranjang" class="active">Keranjang</li></a>
+				<a href="list_pemesanan.html"><li data-target="list_pemesanan">List Pesanan</li></a>
+				<a href="profile.html"><li data-target="profile">Profile</li></a>
 				<a href="user.html"><li data-target="user">Menu Lainnya</li></a>
 			</ul>
     </div>
@@ -62,7 +62,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title centered" id="myModalLabel"><strong>Pilih Pembelian</strong></h4>
+        <h4 class="modal-title centered" id="myModalLabel"><strong>Pilih Pembayaran</strong></h4>
       </div>
       <div class="modal-body">
         <div class="radio"><td width="200px"><label><input type="radio" name="optradio" checked>Cash</label></td>
@@ -72,7 +72,6 @@
           <span class= "sukses"><p>Saldo Anda Rp. 70.000</p></span>
         </div>
         </div>
-        
       </div>
       <div class="modal-footer">
       <a href="list_pemesanan.html"><button type="button" class="btn btn-primary">Lanjutkan</button></a> 
@@ -135,7 +134,7 @@
             <br><br>
             
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pilih_pembayaran">
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#pilih_pembayaran">
               Pilih Pembayaran
             </button>
 
