--- a/PEMBELI/index.html
+++ b/PEMBELI/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
   <input type="hidden" id="menu" value="transaksi">
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-dark">
 			<div class="container-fluid">
 			  <!-- Brand and toggle get grouped for better mobile display -->
 			  <div class="navbar-header">
@@ -52,7 +52,7 @@
     <div class="form-search"> 
       <input type="text" class="form-control" id="inputEmail3">
       <br>
-      <div class="button_cari"><button type="button" class="btn btn-primary">Cari</button></div> 
+      <div class="button_cari"><button type="button" class="btn btn-danger">Cari</button></div> 
     </div>
   </div>
 
