--- a/PEMBELI/list_pesanan_sukses.html
+++ b/PEMBELI/list_pesanan_sukses.html
@@ -22,7 +22,7 @@
     <![endif]-->
   </head>
   <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-dark">
 			<div class="container-fluid">
 			  <!-- Brand and toggle get grouped for better mobile display -->
 			  <div class="navbar-header">
@@ -140,23 +140,28 @@
             </div>
 			</div>
 
-      <div class="col-md-5">
-        <div class="panel-total">
-          <div class="panel">
-            <div class="panel-heading">Total Belanja Kamu</div>
-            <p>Mie Indomie Saus Eropa</p>
-            <p>Rp 10.000 x 3 = Rp 30.000</p>
-            <p>Mie Indomie Saus Afrika</p>
-            <p>Rp 10.000 x 3 = Rp 30.000</p>
-            <h5 class="total-keseluruhan"> Total Keseluruhan<span id="count"></span></h5>
-            <h5 class="total"> <span id="count">Rp 60.000</span></h5>
 
-            <h5 class="saldo"> Saldo Anda Rp 70.000<span id="count"></span></h5>
-            <h5 class="saldo-anda"> Rp 70.000 - Rp 60.000 = <span id="count">Rp 10.000</span></h5>      
-            <br><br>
-          </div> 
-        </div>
+      <div class="col-md-5">
+          <div class="panel-total">
+          <div class="panel">
+              <div class="panel-header">Total Belanja Kamu</div>
+              <br/>
+              <p>Mie Indomie Saus Eropa</p>
+              <p>Rp 10.000 x 3 = Rp 30.000</p>
+              <p>Mie Indomie Saus Afrika</p>
+              <p>Rp 10.000 x 3 = Rp 30.000</p>
+              <h5 class="total-keseluruhan"> Total Keseluruhan<span id="count"></span></h5>
+              <h5 class="total"> <span id="count">Rp 60.000</span></h5>
+  
+              <h5 class="saldo"> Saldo Anda Rp 70.000<span id="count"></span></h5>
+              <h5 class="saldo-anda"> Rp 70.000 - Rp 60.000 = <span id="count">Rp 10.000</span></h5>      
+              <br><br>
+              
+            </div> 
+          </div>
       </div>
+
+
 		</div>
   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
