--- a/PEMBELI/pembayaran_top_up.html
+++ b/PEMBELI/pembayaran_top_up.html
@@ -136,12 +136,13 @@
             <br><br>
             
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pilih_pembayaran">
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#pilih_pembayaran">
               Pilih Pembayaran
             </button>
 
             <br><br>  
           </div> 
+          
         </div> 
         </div>
     </div>
