--- a/PEMBELI/profile.html
+++ b/PEMBELI/profile.html
@@ -23,7 +23,7 @@
   </head>
   <body>
   <input type="hidden" id="menu" value="transaksi">
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-dark">
 			<div class="container-fluid">
 			  <!-- Brand and toggle get grouped for better mobile display -->
 			  <div class="navbar-header">
@@ -148,18 +148,24 @@
               <div class="panel-body">
                 <form class="form-horizontal">
                   <div class="login-form">
+                  <div class= "saldo-btn">
+                    <!-- Button trigger modal -->
+                      <button type="button" class="btn btn-success" name="topUp" id="topUp" value="saldo">
+                      Top Up</button>
+                      <!-- Button trigger modal -->
+                      <button type="button" class="btn btn-success" data-toggle="modal" data-target="#list_top_up">
+                      List Top Up </button>
+                  </div>
+
+
+                      <div class="top-up">
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#top_up">Rp. 50.000</button>
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#top_up">Rp.100.000</button>
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#top_up">Rp. 150.000</button>
+                      </div>
                     <table class="custom-table">
                       <tbody>
-                        <tr class="success">
-                          <!-- Button trigger modal -->
-                          <td><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#top_up">
-                          Top Up
-                          </button></td>
-                          <!-- Button trigger modal -->
-                          <td><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#list_top_up">
-                          List Top Up
-                          </button></td>
-                        </tr>
+                        <div class= "form-biodata">
                         <tr>
                           <td><h5> <div class="register">Saldo</h5></td></div>
                           <td><h5> <div class="register">Rp. 10.000.000</h5></td></div>
@@ -187,6 +193,7 @@
                             <button type="button" class="btn btn-success">Cancel</button>
                           </td>
                         </tr>
+                      </div>
                       </tbody>
                     </table>
                   </div>
@@ -203,6 +210,17 @@
     
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="../scripts/main.js"></script>  
+  <script src="../scripts/main.js"></script>
+  <script type="text/javascript">
+		$(document).ready(function(){
+			$('.top-up').hide()					
+
+			$('#topUp').on('click', function() {
+				$('.top-up').toggle()
+        // alert('hallo')
+			});
+				
+		});
+	</script>  
 
 </body></html>
