--- a/PEMBELI/register.html
+++ b/PEMBELI/register.html
@@ -25,7 +25,7 @@
 	
 
 	<input type="hidden" id="menu" value="flagging">
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-dark">
 			<div class="container-fluid">
 			  <!-- Brand and toggle get grouped for better mobile display -->
 			  <div class="navbar-header">
@@ -52,30 +52,37 @@
 							<table class="custom-table">
 								<tbody>
 									<tr class="success">
-										<a href="register_penjual.html"><div class="radio"><td width="200px"><label><input type="radio" name="optradio" checked>Penjual</label></a></td> <a href="register.html"><td width="200px"><label><input type="radio" name="optradio" checked>Pembeli</label></a></td></div>
+										<div class="radio">
+											<td width="200px"><label><input type="radio" name="optradio" value="penjual" >Penjual</label></td>
+											<td width="200px"><label><input type="radio" name="optradio" value="pembeli" checked>Pembeli</label></td>
+										</div>
 									</tr>
+								</tbody>
+							</table>
+							<div class="form-pembeli">
+								<table>
 									<tr>
-										<td><h5> <div class="register">User ID</h5></td></div> 
+										<td><h5> <div class="register">User ID</div></h5></td> 
 										<td><input type="text" class="form-control" id="inputEmail3"></td>
 									</tr>
 									<tr>
-										<td><h5> <div class="register">Email Address</h5></td></div>
+										<td><h5> <div class="register">Email Address</div></h5></td>
 										<td><input type="text" class="form-control" id="inputEmail3"></td>
 									</tr>
 									<tr>
-										<td><h5> <div class="register">Password</h5></td></div>
+										<td><h5> <div class="register">Password</div></h5></td>
 										<td><input type="password" class="form-control" id="inputEmail3"></td>
 									</tr>
 									<tr>
-											<td><h5> <div class="register">Repassword</h5></td></div>
+											<td><h5> <div class="register">Repassword</div></h5></td>
 										<td><input type="password" class="form-control" id="inputEmail3"></td>
 									</tr>
 									<tr>
-										<td><h5> <div class="register">Floor</h5></td></div>
+										<td><h5> <div class="register">Floor</div></h5></td>
 										<td><input type="number" class="form-control" id="inputEmail3"></td>
 									</tr>
 									<tr>
-										<td><h5> <div class="register">No Handphone</h5></td></div>
+										<td><h5> <div class="register">No Handphone</div></h5></td>
 										<td><input type="number" class="form-control" id="inputEmail3"></td>
 									</tr>
 									<tr>
@@ -87,8 +94,45 @@
 									<tr>
 										<td></td>
 									</tr>
-								</tbody>
-							</table>
+								</table>
+							</div>
+							<div class="form-penjual">
+								<table>
+									<tr>
+										<td><h5> <div class="register">User ID</div></h5></td> 
+										<td><input type="text" class="form-control" id="inputEmail3"></td>
+									</tr>
+									<tr>
+										<td><h5> <div class="register">Email Address</div></h5></td>
+										<td><input type="text" class="form-control" id="inputEmail3"></td>
+									</tr>
+									<tr>
+										<td><h5> <div class="register">Password</div></h5></td>
+										<td><input type="password" class="form-control" id="inputEmail3"></td>
+									</tr>
+									<tr>
+											<td><h5> <div class="register">Repassword</div></h5></td>
+										<td><input type="password" class="form-control" id="inputEmail3"></td>
+									</tr>
+									<tr>
+										<td><h5> <div class="register">NPWP Number</div></h5></td>
+										<td><input type="number" class="form-control" id="inputEmail3"></td>
+									</tr>
+									<tr>
+										<td><h5> <div class="register">No Handphone</div></h5></td>
+										<td><input type="number" class="form-control" id="inputEmail3"></td>
+									</tr>
+									<tr>
+										<td></td>
+										<td>
+											<button class="btn btn-primary " type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Register</button>
+										</td>
+									</tr>
+									<tr>
+										<td></td>
+									</tr>
+								</table>
+							</div>
 						</div>
 					</form>
 				</div>
@@ -103,5 +147,22 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="../scripts/main.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('.form-penjual').hide()					
 
-</body></html>
+			$('input[name=optradio]').on('change', function() {
+				values=$('input[name=optradio]:checked').val()
+				if(values == "pembeli"){
+					$('.form-pembeli').show()
+					$('.form-penjual').hide()					
+				} else {
+					$('.form-pembeli').hide()
+					$('.form-penjual').show()
+				}
+			});
+				
+		});
+	</script>
+</body>
+</html>
